# libzypp-ng

./: .clang-format  CMakeLists.txt  README.md
tests/: main.cpp
tests/download/: CMakeLists.txt  main.cpp
tests/glib/: CMakeLists.txt
util/progressbar/: CMakeLists.txt
util/progressbar/lib/: CMakeLists.txt  progressbar.c  statusbar.c
zypp-ng/: CMakeLists.txt
zypp-ng/include/core/: base.h  context.h  idstring.h  signals.h  task.h  url.h  zyppglobal.h
zypp-ng/include/core/private/: base_p.h  context_p.h  task_p.h
zypp-ng/include/media/curl/: curl.h  downloader.h  httprequesterror.h  request.h
zypp-ng/include/media/curl/private/: curl_p.h  downloader_p.h  request_p.h
zypp-ng/include/repo/: refreshrepo.h
zypp-ng/include/repo/private/: refreshrepo_p.h
zypp-ng/src/core/: base.cpp  context.cpp  task.cpp
zypp-ng/src/media/curl/: curl.cpp  downloader.cpp  httprequesterror.cpp  request.cpp
zypp-ng/src/repo/: refreshrepo.cpp
